flwr_bnn_fromt/outputs/2024-05-07/01-02-02/main.log
[2024-05-07 01:02:02,623][flwr][INFO] - Starting Flower simulation, config: ServerConfig(num_rounds=100, round_timeout=None)
[2024-05-07 01:02:04,047][flwr][INFO] - Flower VCE: Ray initialized with resources: {'CPU': 20.0, 'node:172.17.34.49': 1.0, 'memory': 36643973531.0, 'node:__internal_head__': 1.0, 'object_store_memory': 18321986764.0, 'GPU': 4.0, 'accelerator_type:G': 1.0}
[2024-05-07 01:02:04,048][flwr][INFO] - Initializing global parameters
[2024-05-07 01:02:04,048][flwr][INFO] - Requesting initial parameters from one random client
[2024-05-07 01:02:06,686][flwr][INFO] - Received initial parameters from one random client
[2024-05-07 01:02:06,688][flwr][INFO] - Evaluating initial parameters
[2024-05-07 01:02:10,124][flwr][INFO] - initial parameters (loss, other metrics): 192.6125955581665, {'accuracy': 0.0921}
[2024-05-07 01:02:10,124][flwr][INFO] - FL starting
[2024-05-07 01:02:10,124][flwr][DEBUG] - fit_round 1: strategy sampled 10 clients (out of 50)
[2024-05-07 01:03:00,478][flwr][DEBUG] - fit_round 1 received 10 results and 0 failures
[2024-05-07 01:03:05,674][flwr][WARNING] - No fit_metrics_aggregation_fn provided
[2024-05-07 01:03:07,623][flwr][INFO] - fit progress: (1, 177.2403700351715, {'accuracy': 0.5677}, 57.49911340326071)
[2024-05-07 01:03:07,623][flwr][DEBUG] - evaluate_round 1: strategy sampled 5 clients (out of 50)
[2024-05-07 01:03:26,919][flwr][DEBUG] - evaluate_round 1 received 5 results and 0 failures
[2024-05-07 01:03:26,919][flwr][WARNING] - No evaluate_metrics_aggregation_fn provided
[2024-05-07 01:03:26,919][flwr][DEBUG] - fit_round 2: strategy sampled 10 clients (out of 50)
[2024-05-07 01:04:18,070][flwr][DEBUG] - fit_round 2 received 10 results and 0 failures
[2024-05-07 01:04:25,180][flwr][INFO] - fit progress: (2, 246.6581128835678, {'accuracy': 0.6455}, 135.05608889460564)
[2024-05-07 01:04:25,180][flwr][DEBUG] - evaluate_round 2: strategy sampled 5 clients (out of 50)
[2024-05-07 01:04:44,487][flwr][DEBUG] - evaluate_round 2 received 5 results and 0 failures
[2024-05-07 01:04:44,488][flwr][DEBUG] - fit_round 3: strategy sampled 10 clients (out of 50)
[2024-05-07 01:05:35,921][flwr][DEBUG] - fit_round 3 received 10 results and 0 failures
[2024-05-07 01:05:43,046][flwr][INFO] - fit progress: (3, 203.31881134025753, {'accuracy': 0.8253}, 212.92180352658033)
[2024-05-07 01:05:43,046][flwr][DEBUG] - evaluate_round 3: strategy sampled 5 clients (out of 50)
[2024-05-07 01:06:02,361][flwr][DEBUG] - evaluate_round 3 received 5 results and 0 failures
[2024-05-07 01:06:02,362][flwr][DEBUG] - fit_round 4: strategy sampled 10 clients (out of 50)
[2024-05-07 01:06:19,879][flwr][ERROR] - [36mray::launch_and_fit()[39m (pid=843867, ip=172.17.34.49)
  At least one of the input arguments for this task could not be computed:
ray.exceptions.RaySystemError: System error: 'return' outside function (aggregate.py, line 77)
traceback: Traceback (most recent call last):
  File "/share/home/rkat6291/flwr_bnn_fromt/client.py", line 5, in <module>
    from flwr.server.strategy import trans_autoencoder
  File "/home/rkat6291/miniconda3/envs/flower_tutorial/lib/python3.8/site-packages/flwr/__init__.py", line 20, in <module>
    from . import client, common, server, simulation
  File "/home/rkat6291/miniconda3/envs/flower_tutorial/lib/python3.8/site-packages/flwr/server/__init__.py", line 18, in <module>
    from . import strategy
  File "/home/rkat6291/miniconda3/envs/flower_tutorial/lib/python3.8/site-packages/flwr/server/strategy/__init__.py", line 18, in <module>
    from .fault_tolerant_fedavg import FaultTolerantFedAvg as FaultTolerantFedAvg
  File "/home/rkat6291/miniconda3/envs/flower_tutorial/lib/python3.8/site-packages/flwr/server/strategy/fault_tolerant_fedavg.py", line 34, in <module>
    from .aggregate import aggregate, weighted_loss_avg
  File "/home/rkat6291/miniconda3/envs/flower_tutorial/lib/python3.8/site-packages/flwr/server/strategy/aggregate.py", line 77
    return weights_prime
    ^
SyntaxError: 'return' outside function
